# reasoning_audio

./: .dockerignore  .env.example  .gitignore  Dockerfile  LICENSE  README.md  environment.yml  evaluate_main.py  init.sh  main.py  pyproject.toml  requirements.txt
.github/: copilot-instructions.md
DevelopLog/: 25_5_18.md  docker_init.md  uv_tutorial.md
app/: config.py
app/prompts/: __init__.py  prompt_manager.py
app/prompts/scripts/: 07_02_FirstTry_Prompt.jinja2  07_08_Classification_Prompt.jinja2
app/utils/: evaluate.py
docs/: Readme.txt  reference.md
outputs/: audio_analysis_results.json_372596.json  audio_analysis_results.json_372879.json  audio_analysis_results.json_376285.json  audio_analysis_results.json_376286.json  audio_analysis_results.json_376287.json  audio_analysis_results.json_376288.json  audio_analysis_results.json_376289.json  audio_analysis_results.json_376290.json  audio_analysis_results.json_376293.json  audio_analysis_results.json_376468.json
reference/: reference.md
scripts/: Bayesian_SED.py  all_AST.py  all_CLAP.py  calculate_statistical_priors.py  feature_POI.py  process_poi.py
